--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroku-vless",
+  "name": "hopkfjg",
   "description": "Deploy vless on Heroku.",
   "keywords": [
     "vless"
@@ -7,10 +7,10 @@
   "env": {
     "UUID": {
       "description": "VLESS UUID",
-      "value": "10974d1a-cbd6-4b6f-db1d-38d78b3fb109"
+      "value": "638eabfb-8c99-4dc8-a243-dc3d9516e62b"
     }
   },
-  "website": "https://github.com/rptec/",
-  "repository": "https://github.com/rptec/heroku-vless",
+  "website": "https://github.com/jdhfrue/",
+  "repository": "https://github.com/jdhfrue/hopkfjg",
   "stack": "container"
 }
